Add links at top of calibration notebook

--- a/calibration.ipynb
+++ b/calibration.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cd29642b",
+   "metadata": {},
+   "source": [
+    "# Calibration\n",
+    "\n",
+    "For the currently used values, skip to [Au calibration](#au-calibration)\n",
+    "\n",
+    "- [Au calibration](#au-calibration)\n",
+    "  - [120 cm](#120-cm)\n",
+    "  - [150 cm](#150-cm)\n",
+    "  - [200 cm](#200-cm)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "253a2651-2d41-4d21-b42d-45165f0e0f15",
