Update tutorial according to feedback

--- a/pets-guide/pets_bibliography.bib
+++ b/pets-guide/pets_bibliography.bib
@@ -15,7 +15,7 @@
 @book{international_tables_crystallography,
   title      = {International {{Tables}} for {{Crystallography}}: {{Space-group}} Symmetry},
   shorttitle = {International {{Tables}} for {{Crystallography}}},
-  editor     = {Hahn, {\relax Th}. and Fuess, H. and Hahn, {\relax Th}. and Wondratschek, H. and M{\"u}ller, U. and Shmueli, U. and Prince, E. and Authier, A. and Kopsk{\'y}, V. and Litvin, D. B. and Rossmann, M. G. and Arnold, E. and Hall, S. and McMahon, B.},
+  editor     = {Hahn, {Th}. and Fuess, H. and Hahn, {Th}. and Wondratschek, H. and M{\"u}ller, U. and Shmueli, U. and Prince, E. and Authier, A. and Kopsk{\'y}, V. and Litvin, D. B. and Rossmann, M. G. and Arnold, E. and Hall, S. and McMahon, B.},
   year       = {2006},
   month      = oct,
   series     = {International {{Tables}} for {{Crystallography}}},
@@ -42,7 +42,6 @@
   issn       = {2053-2733},
   doi        = {10.1107/S2053273315001266},
   urldate    = {2024-12-18},
-  abstract   = {Accurate structure refinement from electron-diffraction data is not possible without taking the dynamical-diffraction effects into account. A complete three-dimensional model of the structure can be obtained only from a sufficiently complete three-dimensional data set. In this work a method is presented for crystal structure refinement from the data obtained by electron diffraction tomography, possibly combined with precession electron diffraction. The principle of the method is identical to that used in X-ray crystallography: data are collected in a series of small tilt steps around a rotation axis, then intensities are integrated and the structure is optimized by least-squares refinement against the integrated intensities. In the dynamical theory of diffraction, the reflection intensities exhibit a complicated relationship to the orientation and thickness of the crystal as well as to structure factors of other reflections. This complication requires the introduction of several special parameters in the procedure. The method was implemented in the freely available crystallographic computing system Jana2006.},
   langid     = {english}
 }
 
@@ -65,7 +64,6 @@
   issn     = {2052-5206},
   doi      = {10.1107/S2052520619007534},
   urldate  = {2025-02-03},
-  abstract = {Electron diffraction tomography (EDT) data are in many ways similar to X-ray diffraction data. However, they also present certain specifics. One of the most noteworthy is the specific rocking curve observed for EDT data collected using the precession electron diffraction method. This double-peaked curve (dubbed `the camel') may be described with an approximation based on a circular integral of a pseudo-Voigt function and used for intensity extraction by profile fitting. Another specific aspect of electron diffraction data is the high likelihood of errors in the estimation of the crystal orientation, which may arise from the inaccuracies of the goniometer reading, crystal deformations or crystal movement during the data collection. A method for the refinement of crystal orientation for each frame individually is proposed based on the least-squares optimization of simulated diffraction patterns. This method provides typical angular accuracy of the frame orientations of less than 0.05{$^\circ$}. These features were implemented in the computer program PETS 2.0. The implementation of the complete data processing workflow in the program PETS and the incorporation of the features specific for electron diffraction data is also described.},
   langid   = {english},
   keywords = {crystal orientation,electron diffraction tomography,PETS,precession electron diffraction,profile fitting,serial electron crystallography},
   file     = {/home/iverks/Zotero/storage/GTGF7NMT/Palatinus et al. - 2019 - Specifics of the data processing of precession electron diffraction tomography data and their implem.pdf;/home/iverks/Zotero/storage/8EB7RCU2/S2052520619007534.html}
@@ -82,5 +80,42 @@
   annotation   = {Accepted: 2024-09-10T17:20:58Z},
   note         = {Master's Thesis, Department of Physics, NTNU},
   url          = {https://hdl.handle.net/11250/3151292},
-  file         = {/home/iverks/Zotero/storage/5CT733LS/Teien - 2024 - Optimizing the data collection and data processing procedure for 3D electron diffraction crystal str.pdf}
+  file         = {/home/iverks/Zotero/storage/5CT733LS/Teien - 2024 - Optimizing the data collection and data processing procedure for 3D electron diffraction crystal str.pdf},
+  language     = {eng}
+}
+
+@article{short_history_of_shelx,
+  title     = {A Short History of {{SHELX}}},
+  author    = {Sheldrick, G. M.},
+  year      = {2008},
+  month     = jan,
+  journal   = {Acta Crystallographica Section A: Foundations of Crystallography},
+  volume    = {64},
+  number    = {1},
+  pages     = {112--122},
+  publisher = {International Union of Crystallography},
+  issn      = {0108-7673},
+  doi       = {10.1107/S0108767307043930},
+  urldate   = {2025-05-16},
+  abstract  = {The SHELX programs for crystal structure determination are reviewed by their author.},
+  copyright = {Copyright (c) 2008 International Union of Crystallography},
+  langid    = {english},
+  file      = {/home/iverks/Zotero/storage/R63IYUEE/Sheldrick - 2008 - A short history of SHELX.pdf}
+}
+
+@article{shelxt_structure_determination,
+  title     = {{{SHELXT}} -- {{Integrated}} Space-Group and Crystal-Structure Determination},
+  author    = {Sheldrick, G. M.},
+  year      = {2015},
+  month     = jan,
+  journal   = {Acta Crystallographica Section A: Foundations and Advances},
+  volume    = {71},
+  number    = {1},
+  pages     = {3--8},
+  publisher = {International Union of Crystallography},
+  issn      = {2053-2733},
+  doi       = {10.1107/S2053273314026370},
+  urldate   = {2025-05-22},
+  langid    = {english},
+  file      = {/home/iverks/Zotero/storage/Z4GEQYLY/Sheldrick - 2015 - SHELXT – Integrated space-group and crystal-structure determination.pdf}
 }
